# CompetitiveProgramming

./: CMakeLists.txt
.github/workflows/: cmake.yml
src/datastructures/trees/: CMakeLists.txt  fenwick_tree.cpp  segment_tree.cpp
tests/: CMakeLists.txt  fenwick_tree_tests.cpp  segment_tree_tests.cpp
